@@ -33,14 +33,6 @@
     <url>https://github.com/Azure/azure-sdk-for-java/issues</url>
   </issueManagement>
 
-  <properties>
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.spring.resourcemanager/com.azure.spring.resourcemanager.connectionstring=ALL-UNNAMED
-      --add-opens com.azure.spring.resourcemanager/com.azure.spring.resourcemanager.provisioning.servicebus=ALL-UNNAMED
-      --add-opens com.azure.spring.resourcemanager/com.azure.spring.resourcemanager.provisioning.eventhubs=ALL-UNNAMED
-      --add-opens com.azure.spring.resourcemanager/com.azure.spring.resourcemanager.implementation.crud=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>com.azure.spring</groupId>
@@ -52,7 +44,7 @@
     <dependency>
       <groupId>com.azure.resourcemanager</groupId>
       <artifactId>azure-resourcemanager</artifactId>
-      <version>2.10.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager;dependency} -->
+      <version>2.11.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager;dependency} -->
     </dependency>
 
     <dependency>
@@ -64,13 +56,13 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.8.1</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter;external_dependency} -->
+      <version>5.8.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>5.3.13</version> <!-- {x-version-update;org.springframework:spring-test;external_dependency} -->
+      <version>5.3.14</version> <!-- {x-version-update;org.springframework:spring-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
 
